--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -21,11 +21,9 @@
         <li class="nav-item active">
           <a class="nav-link" href="/register">Register <span class="sr-only">(current)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">about</a>
+        <li class="nav-item active">
+          <a class="nav-link" href="/login">login <span class="sr-only">(current)</span></a>
         </li>
-
-      
       </ul>
 
     </div>
