--- a/templates/register.html
+++ b/templates/register.html
@@ -5,29 +5,29 @@
 {% endblock %}
 
 {% block body %}
-    <h1>REGISTER</h1>
+    <h1>Register</h1>
     
-        {% from "includes/_formshelpers.html" import render_field %}
+        
 
     <form method="POST">
         <div class=form-group>
-            {{render_field(form.name, class_="form-control")}}
+            <input type="text" name="name" class="form-control" placeholder="Name" required>
 
         </div>
         <div class=form-group>
-            {{render_field(form.email, class_="form-control")}}
+            <input type="text" name="email" class="form-control" placeholder="Email" required>
 
         </div>
         <div class=form-group>
-            {{render_field(form.username, class_="form-control")}}
+            <input type="text" name="username" class="form-control" placeholder="Username" required>
 
         </div>
         <div class=form-group>
-            {{render_field(form.password, class_="form-control")}}
+            <input type="text" name="password" class="form-control" placeholder="Password" required>
 
         </div>
         <div class=form-group>
-            {{render_field(form.confirm, class_="form-control")}}
+            <input type="text" name="confirm" class="form-control" placeholder="Confirm" required>
 
         </div>
 
