--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,9 @@
 
 {% block body %}
     <h1>Register</h1>
-    
+
+        <div>{{confirm}}</div>
+
         
 
     <form method="POST">
@@ -27,7 +29,7 @@
 
         </div>
         <div class=form-group>
-            <input type="text" name="confirm" class="form-control" placeholder="Confirm" required>
+            <input type="text" name="confirm" class="form-control" placeholder="Confirm"required >
 
         </div>
 
