--- a/templates/search.html
+++ b/templates/search.html
@@ -1,17 +1,17 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Login Page
+    Search Page
 {% endblock %}
 
 {% block body %}
     
-    <h1>login</h1>
+    <h1>Search Page</h1>
 
    
      
 
-    <form method="post", action="{{url_for('login')}}">
+    <form method="post">
         <div class=form-group>
             <input type="text" name="username" class="form-control" placeholder="Username" >
 
