--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -12,18 +12,24 @@
           <a class="nav-link" href="/about">about</a>
         </li>
 
-        <li class="nav-item">
-          <a class="nav-link disabled" href="/books" tabindex="-1" aria-disabled="true">books</a>
-        </li>
       </ul>
-
+      
       <ul class=" nav navbar-nav navbar-right">
+        {%if not session.log%}
         <li class="nav-item active">
           <a class="nav-link" href="/register">Register <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/login">login <span class="sr-only">(current)</span></a>
         </li>
+        {%else%}
+         <li class="nav-item">
+          <a class="nav-link disabled" href="/books" tabindex="-1" aria-disabled="true">books</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/logout">logout <span class="sr-only">(current)</span></a>
+        </li>
+        {% endif %}
       </ul>
 
     </div>
