--- a/templates/search.html
+++ b/templates/search.html
@@ -7,10 +7,7 @@
 {% block body %}
     
     <h1>Search Page</h1>
-
-   
-     
-
+<div>
     <form method="post">
         <div class=form-group>
             <input type="text" name="username" class="form-control" placeholder="Username" >
@@ -20,8 +17,41 @@
             <input type="text" name="password" class="form-control" placeholder="Password" >
 
         </div>
-        
-        
         <p> <input type="submit", class="btn btn-primary", value="Submit"></p>    
     </form>
+
+</div>
+<div>
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+    </table>
+</div>
+ 
 {% endblock %}
